# unstruct_navigation

./: setup.py
unstruct_navigation/action_sampler/: __init__.py  action_grid.py  action_sampler.py  action_sampler_flat.py
unstruct_navigation/cfg/: experiment_params.py  mppi.yaml  ros_params.py
unstruct_navigation/cost_evaluator/: __init__.py  cost_eval.py
unstruct_navigation/feature_extractor/: __init__.py  bev_models.py  stego_extractor.py  stego_interface.py
unstruct_navigation/image_projector/: __init__.py  image_kernel.py  image_projector.py  img_projector_copy.py
unstruct_navigation/models/: __init__.py  feature_encoder.py  loss.py
unstruct_navigation/mppi/: Delta_Sampling.py  MPPI.py  SimpleCarCost.py  SimpleCarDynamicsCUDA.py  __init__.py  mppi_offroad.py  slip3d.cpp
unstruct_navigation/train/: __init__.py  dir.py  train_main.py  train_utils.py
unstruct_navigation/utils/: __init__.py  file_utils.py  get_logger.py  ptypes.py  utils.py
unstruct_navigation_ros/: CMakeLists.txt  package.xml  setup.py
unstruct_navigation_ros/cfg/: dyn.cfg
unstruct_navigation_ros/config/: default.yaml  resized_all.yaml  resized_wide_angle_dual.yaml
unstruct_navigation_ros/launch/: unstruct_planner.launch  unstruct_visual_navigation.launch
unstruct_navigation_ros/scripts/: test_gui.py  unstruct_feature_extractor_node.py  unstruct_planner_node.py
unstruct_navigation_ros/src/unstruct_navigation_ros/: __init__.py  ros_converter.py
wild_visual_navigation_msgs/: CMakeLists.txt
wild_visual_navigation_msgs/msg/: Features.msg
